--- a/restaurant-service/pom.xml
+++ b/restaurant-service/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.foodapp</groupId>
         <artifactId>foodapp</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>3.2.0</version>
     </parent>
     <artifactId>restaurant-service</artifactId>
     <dependencies>
