--- a/pom.xml
+++ b/pom.xml
@@ -12,4 +12,13 @@
         <module>order-service</module>
         <module>delivery-service</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
