--- a/restaurant-service/pom.xml
+++ b/restaurant-service/pom.xml
@@ -23,5 +23,13 @@
         </dependency>
         <!-- add other dependencies if needed -->
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
